@@ -9,6 +9,8 @@ svn trunk
 * In :mod:`paste.proxy`, added some more headers that are disallowed
   in WSGI (e.g., Keep-Alive).  Send Content-Length.
 
+* Make :mod:`paste.debug.prints` work with Google App Engine.
+
 1.7.1
 -----
 
